gitflow-feature-stash: tryPublish

--- a/TravelCat2021/TravelCat2021.csproj
+++ b/TravelCat2021/TravelCat2021.csproj
@@ -2,9 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>6322df4b-d0bc-4ef5-a582-4eb463f9240f</UserSecretsId>
   </PropertyGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+  </ItemGroup>
 
 
 </Project>
