連線字串藏起乃
連線字串還是不要外露比較好可是到底要怎麼存才不會常常找不到XD

--- a/TravelCat2021/appsettings.Development.json
+++ b/TravelCat2021/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "TravelDatabase": "Server=database-1.c1v2bxxrf77t.us-east-2.rds.amazonaws.com;Database=TravelAnimal;User ID=gamer;Password=7MBvFQJPvnWMGJW2pMsi;Trusted_Connection=False;MultipleActiveResultSets=True;"
+    "TravelDatabase": "Server=.;Database=TravelAnimal;User ID=gamer;Password=xxxxxx;Trusted_Connection=False;MultipleActiveResultSets=True;"
   }
 }
