--- a/TravelCat2021/appsettings.json
+++ b/TravelCat2021/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "TravelDatabase": "Server=database-1.c1v2bxxrf77t.us-east-2.rds.amazonaws.com;Database=TravelAnimal;User ID=gamer;Password=7MBvFQJPvnWMGJW2pMsi;Trusted_Connection=False;MultipleActiveResultSets=True;"
+    "TravelDatabase": "Server=.;Database=TravelAnimal;User ID=gamer;Password=xxxxxx;Trusted_Connection=False;MultipleActiveResultSets=True;"
   },
   "AllowedHosts": "*"
 }
